<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitLog</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Добавьте упражнение</string>
    <string name="add">Добавить</string>
    <string name="continue_">Продолжить</string>
    <string name="title_exercise_activity">Упражнения</string>
    <string name="time_to_end">30</string>
    <string name="message">Упражнение</string>
    <string name="enter_time">Введите длительность упражнения</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="training_days">Дни тренировок</string>
    <string name="cancel">Отмена</string>
    <string name="clear_history">Очистить историю</string>
    <string name="delete_record">Удалить запись</string>
    <string name="relax_time">Отдых (c)</string>
    <string name="repeat_num">Повторы</string>
	<string name="weight">Вес</string>
	<string name="time">Время</string>
	<string name="approach_number">№</string>
	<string name="exit_question">Хотите выйти?</string>
	<string name="change_question">Изменить?</string>
	<string name="apply">Применить</string>
	<string name="data_successfully_updated">"Данные успешно обновлены"</string>
	<string name="yes">Да</string>
	<string name="no">Нет</string>
	<string name="check_entered_data">Проверьте правильность ввода данных</string>
	<string name="no_data">Нет данных</string>
</resources>